--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -50,7 +50,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="8dp" />
+            android:layout_margin="8dp"
+            android:background="@drawable/rounded_btn_background"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:textColor="@android:color/white" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
