--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorStateTravelling">#D587FF</color>
     <color name="colorStateWorking">#87FFAD</color>
     <color name="colorStateOpened">#D9FFF1</color>
+    <color name="semiTransparentGray">#60D6D6D6</color>
 </resources>
