Color palette of the application theme changed to purple

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#8D0BDE</color>
+    <color name="colorPrimaryDark">#530087</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorStateTravelling">#D587FF</color>
-    <color name="colorStateWorking">#87FFAD</color>
-    <color name="colorStateOpened">#D9FFF1</color>
+    <color name="colorStateTravelling">#A84FE0</color>
+    <color name="colorStateWorking">#8D0BDE</color>
+    <color name="colorStateOpened">#DEBDF2</color>
     <color name="semiTransparentGray">#60D6D6D6</color>
 </resources>
