--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#8D0BDE</color>
     <color name="colorPrimaryDark">#530087</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorStateTravelling">#A84FE0</color>
-    <color name="colorStateWorking">#8D0BDE</color>
-    <color name="colorStateOpened">#DEBDF2</color>
+    <color name="colorStateTravelling">#8952AB</color>
+    <color name="colorStateWorking">@color/colorPrimary</color>
+    <color name="colorStateOpened">#623380</color>
 </resources>
