Part of logic that changes the status related contents and appearance of the task item extracted to a separate method of the view holder class

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorStateTravelling">#8952AB</color>
     <color name="colorStateWorking">@color/colorPrimary</color>
     <color name="colorStateOpened">#623380</color>
+    <color name="white">@android:color/white</color>
 </resources>
