--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="64dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
+    android:layout_marginHorizontal="8dp"
     app:cardCornerRadius="16dp"
     app:cardElevation="4dp">
 
@@ -62,8 +61,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:maxWidth="120dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
+            android:paddingHorizontal="8dp"
             android:textColor="@android:color/white" />
 
     </RelativeLayout>
