Action bar replaced with toolbar widget

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.mattech.task_list.activities.MainActivity" />
-
-    <ImageButton
-        android:id="@+id/add_btn"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="40dp"
-        android:layout_gravity="bottom|right"
-        android:background="@drawable/oval_btn_background"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
         android:elevation="8dp"
-        android:src="@drawable/add_icon" />
+        app:title="@string/app_name"
+        app:titleTextColor="@android:color/white" />
 
-</FrameLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="com.mattech.task_list.activities.MainActivity" />
+
+        <ImageButton
+            android:id="@+id/add_btn"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="40dp"
+            android:layout_gravity="bottom|right"
+            android:background="@drawable/oval_btn_background"
+            android:elevation="8dp"
+            android:src="@drawable/add_icon" />
+
+    </FrameLayout>
+</LinearLayout>
