Task insertion triggered using data binding

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,8 @@
                 android:layout_gravity="bottom|right"
                 android:background="@drawable/oval_btn_background"
                 android:elevation="8dp"
-                android:src="@drawable/add_icon" />
+                android:src="@drawable/add_icon"
+                android:onClick="@{v -> viewModel.insertTask()}"/>
 
         </FrameLayout>
     </LinearLayout>
